--- a/table.html
+++ b/table.html
@@ -18,7 +18,7 @@
         <label for="BWI-SBY1">BWI-SBY1</label>
         <div>
             <input type="submit"value="kirim">
-            <input type="reset"value="reset">
+            <input type="reset"value="reset">gi
         </div>
 
     </form>
