--- a/Biodata.html
+++ b/Biodata.html
@@ -20,8 +20,10 @@
     <ul> Nov - April 2019 PT Swabina Gatra Travel | Kasi Pelayanan</ul>
 <h2>Kontak Saya</h2>
     <a href="https:www.instagram.com/angguncaa_/">Instagram</a>
+    <br>
     <a href="https://wa.me/<+628816088176">WhatsAPP</a>
-    <P>Email :Angguncahaya.20018@mhs.unesa.ac.id</P>
+    <br>
+    <a href="file:///C:/Users/THINKPAD/PRAKTIK/Portofolio.html">Portofolio</a>
 
 
 
