--- a/Biodata.html
+++ b/Biodata.html
@@ -1,24 +1,32 @@
-<html></html>
+<html></html> <head>
+    <title>Biodata Anggun Cahaya Purnamasari</title>
+        <style type="text/css">
+            .judul{ background-color: rgb(161, 218, 167);
+            color:rgb(71, 67, 67); padding: 5px;border:2px solid rgb(38, 55, 38) ;}
+        </style>
+</head>
+
 <body>
-    <h1>Anggun Cahaya Purnamasari<h1>
+    <body style="font-size:15 ;"text="#oooooo" bgcolor="#D3D3D3">
+    <h1 style="text-align: center;" class="judul">BIODATA<h1>
     <img src="myself.jpeg" width="250">
-<h2>Tentang Saya</h2>
-<p>Hallo! Saya Anggun Cahaya Purnamasari salah satu mahasiswa dari Universitas Negeri Surabaya. 
+<h2 style="color: rgb(21, 100, 21); margin-bottom: 7pt;">Tentang Saya</h2>
+<p style="text-align: justify;">Hallo! Saya Anggun Cahaya Purnamasari salah satu mahasiswa dari Universitas Negeri Surabaya. 
     Saya memiliki ketertarikan dalam bidang pengembangan daerah melalui eksplorasi potensi Daerah untuk mendukung tercapainya kesejahteraan masyarakat.
     Selain itu saya juga tertarik dengan kegiatan analisi isu-isu kebijakan publik. 
-    Motto dalam diri saya yaitu, berjuanglah seakan-akan nyawamu dipertaruhkan</p>
-<h2> Keahlian Saya</h2>
+    Motto dalam diri saya yaitu, berjuanglah seakan-akan nyawamu dipertaruhkan.</p>
+<h2 style="color: rgb(21, 100, 21);"> Keahlian Saya</h2>
     <ul> 1. Microsoft office (Word, Excel & Power point)</ul>
     <ul> 2. Google Apps (Drive, docs, & spreadseets) </ul>
     <ul> 3. Design Grafis</ul>
     <ul> 4. Leadership</ul>
     <ul> 5. Accounting</ul>
-<h2> Riwayat Pendidikan</h2>
+<h2 style="color: rgb(21, 100, 21);"> Riwayat Pendidikan</h2>
     <ul> 2017 - 2020 SMKM 1 Gresik | Akuntansi & Keuangan Lembaga </ul>
     <ul> 2020 - Present Universitas Negeri Surabaya | S1 Ilmu Administrasi Negara</ul>
-<h2> Pengalaman Magang</h2>
+<h2 style="color:rgb(21, 100, 21); margin-bottom: 7pt;"> Pengalaman Magang</h2>
     <ul> Nov - April 2019 PT Swabina Gatra Travel | Kasi Pelayanan</ul>
-<h2>Kontak Saya</h2>
+<h2 style="color: rgb(21, 100, 21) ; margin-bottom: 7pt;">Kontak Saya</h2>
     <a href="https:www.instagram.com/angguncaa_/">Instagram</a>
     <br>
     <a href="https://wa.me/<+628816088176">WhatsAPP</a>
