--- a/portofolio.html
+++ b/portofolio.html
@@ -10,6 +10,9 @@
             </style>
     </head>
     <body>
+        <a href="index.html">biodata</a>
+        <a href="">portofolio</a>
+
         <body style="font-size:15 ;" bgcolor="#f5f5DC" text="#8B4513">
             <h1 style="text-align:center ;" class="judul">PORTOFOLIO</h1>
                 <H2 style="font-size: 17;">Anggun Cahaya Purnamasari</H2>
